# hit-detector

./: .gitignore  README.md  model.pt  pyproject.toml
src/hitdetector/: dataset.py  extract_patches.py  inference.py  marker.py  train.py
